Frontend dosyaları güncellendi

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,18 +1,17 @@
-
 <footer>
     <div class="footer-container">
         <div class="footer-about">
             <h2>Kişisel Blog</h2>
             <p>En güncel içeriklerle bilgi dolu bir blog deneyimi sunuyoruz.</p>
         </div>
-        
+
         <div class="footer-links">
             <h3>Hızlı Bağlantılar</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Ana Sayfa</a></li>
+                <li><a href="about.html">Hakkımızda</a></li>
+                <li><a href="blog.html">Yazılar</a></li>
+                <li><a href="contact.html">İletişim</a></li>
             </ul>
         </div>
 
@@ -22,7 +21,8 @@
                 <a href="https://www.linkedin.com/in/huseyin-budak-286094252/" target="_blank">
                     <img src="/assets/icons/linkedin.png" alt="Linkedin">
                 </a>
-                <a href="https://www.instagram.com/huseyinbbudak?igsh=MWd1b3oyMWFidmkxOA%3D%3D&utm_source=qr" target="_blank">
+                <a href="https://www.instagram.com/huseyinbudak_?igsh=MWd1b3oyMWFidmkxOA%3D%3D&utm_source=qr"
+                    target="_blank">
                     <img src="/assets/icons/instagram.png" alt="Instagram">
                 </a>
             </div>
